--- a/package.json
+++ b/package.json
@@ -4,11 +4,6 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@gsap/react": "^2.1.0",
-    "@mui/icons-material": "^5.15.13",
-    "@mui/material": "^5.15.13",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +18,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "postinstall": "npm install react-fullscreen-image --force || true",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
